# Splunk-Apps

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUPPORT.md  advanced.rst  commands.rst  faq.rst  getting_started.rst  index.rst  overview.rst  pandoc-config.json  release.config.js  release_notes.rst  splunk_cloud.json  support.rst  trial_demo.rst  troubleshoot.rst  universal_forwarder.rst  upgrade.rst  userid.rst
.github/: cicd-sequence-diagram.mmd
README/: app.conf.spec
Splunk_TA_paloalto/: .gitignore  .travis.yml  Makefile  README.md  README.txt  Splunk_TA_paloalto.aob_meta  VERSION  app.manifest
SplunkforPaloAltoNetworks/: .gitignore  CHANGES  README.md  app.manifest
_build/: .buildinfo  advanced.html  commands.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  overview.html  release_notes.html  search.html  searchindex.js  support.html  trial_demo.html  troubleshoot.html  universal_forwarder.html  upgrade.html  userid.html
default/: app.conf  collections.conf  commands.conf  datamodels.conf  eventtypes.conf  macros.conf  savedsearches.conf  searchbnf.conf  ui-tour.conf
demo/: .gitignore  Dockerfile  README.md  create_demo_user.yml  default.yml  install-docker-on-kali.sh  install.sh  setup_demo.yml
demo/reset-demo-function/: .gcloudignore  .gitignore  Makefile  README.md  config.yml.example  main.py  pyproject.toml  requirements.txt
local/: macros.conf.custom  savedsearches.conf.custom
release/: bumpversion.sh  github.sh  splunkbase.sh
scripts/: appinspect.sh  build.sh  common.sh  (+5 more)
(+177 files in other folders)
