[tool.poetry]
name = "reset_demo_function"
version = "0.1.2"
description = "Cloud Function to reset the PANW Splunk demo"
authors = ["Brian Torres-Gil <btorres-gil@paloaltonetworks.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
google-auth = "^2.6.2"
google-cloud-container = "^2.10.7"
kubernetes = "^23.3.0"
json-logging = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
